<resources>
    <string name="app_name">MindMines</string>
    <string name="login_header_text">Вход в аккаунт</string>
    <string name="login_button_text">Войти</string>
    <string name="login_email_input_hint">Введите email</string>
    <string name="login_password_input_hint">Введите пароль</string>
    <string name="register_page_button_text">Регистрация</string>
    <string name="default_hello_world_text">default Hello World!</string>
    <string name="default_number_text">1</string>
    <string name="logout_btn_text">Logout</string>
    <string name="habit_view_title_text">Ваши привычки:</string>
    <string name="return_to_previous_activity">Вернуться</string>
    <string name="habit_add_title">Создание привычки</string>
    <string name="save_button_text">Сохранить</string>
    <string name="save_habit_button_text">Сохранить</string>
    <string name="add_habit_button_text">Добавить привычку</string>
    <string name="default_change_title">Введите название</string>
    <string name="edit_habit_title_hint_text">Введите название привычки</string>
    <string name="edit_habit_desc_hint_text">Введите описание привычки</string>
    <string name="edit_habit_frequency_hint_text">Время между проверками: </string>
    <string name="edit_habit_priority_hint_text">Введите приоритет</string>
    <string name="edit_habit_difficulty_hint_text">Введите сложность</string>
    <string name="edit_habit_type_hint_text">Тип привычки: полезная / вредная</string>
    <string name="habit_time_of_day_text">Добавить точные напоминания</string>
    <string name="update_button_text">Update</string>
    <string name="userStatus_view_text">Уровень:</string>
    <string name="profile_button_text">Профиль</string>
    <string name="_1">1</string>
    <string name="home_button_desc">home_button</string>
    <string name="user_level_view_text">Текущий уровень:</string>
    <string name="user_exp_view_text">Количество опыта:</string>
    <string name="user_exp_until_view_text">До следующего уровня:</string>
    <string name="leader_board_title_text">Таблица лидеров:</string>
    <string name="rank_column_name">№</string>
    <string name="usernames_column_name">Имена игроков</string>
    <string name="level_column_name">Уровень</string>
    <string name="begin_expedition_text">Начать экспедицию</string>
    <string name="your_character_party_text">Ваша команда</string>
    <string name="character_name_text_view">Персонаж: </string>
    <string name="attack_view_text">Очки атаки</string>
    <string name="defence_view_text">Очки защиты</string>
    <string name="speed_view_text">Очки скорости</string>
    <string name="char_stats_view_button">Статистика</string>
    <string name="char_equip_view_button">Экипировка</string>
    <string name="default_party_name_text">Название команды</string>
    <string name="good_habit_button_text">Полезная</string>
    <string name="bad_habit_button_text">Вредная</string>
    <string name="habit_difficulty_text_view">Сложность</string>
    <string name="habit_priority_text_view">Приоритет</string>
    <string name="interval_configure_text">Настройте интервал:</string>
    <string name="choose_habit_type_text">Выберете тип привычки:</string>
    <string name="goal_text">Цель:</string>
    <string name="tasks_view_text">Задачи:</string>
    <string name="default_time_text">1 час</string>
    <string name="create_expedition_button_text">Отправить экспедицию</string>
    <string name="delete_last_expedition_debug_button">Удалить последнюю экспедицию</string>
    <string name="update_last_expedition_debug_button">Обновить экспедиции</string>
    <string name="location_view_text">Локация</string>
    <string name="location_description_text">location_description</string>
    <string name="choose_location_text">Выберите локацию</string>
    <string name="enter_message_view_text">Введите сообщение</string>
    <string name="send_button_text">Отправить</string>
    <string name="chat_assistant_title_text">Чат с ассистентом</string>
    <string name="profile_title_text">Профиль</string>
    <string name="assistant_title_text">Ассистент</string>
    <string name="habits_view_title_text">Привычки</string>
    <string name="party_title_text">Команда</string>
    <string name="friends_title_text">Друзья</string>
    <string name="registration_header_text">Регистрация</string>
    <string name="login_password_confirmation_input_hint">Подтвердите пароль</string>
    <string name="url_change_text">Введите ip сервера</string>
    <string name="url_input_hint">Введите ip</string>
    <string name="coin_icon_description">coin_icon_description</string>
    <string name="level_title_view_text">Lvl:</string>
    <string name="save_equipment_button">Купить снаряжение</string>
    <string name="equip_name_text_value_default_text">Название экипировки</string>
    <string name="shop_select_first_equipment">Выберите экипировку</string>
    <string name="shop_select_equipment_first_toast">Сначала выберите предмет в списке</string>
    <string name="left_to_right_arrow">left_to_right_arrow</string>
    <string name="add_coins_debug_button_text">Добавить монеты</string>
    <string name="add_char_xp_debug_button_text">Добавить XP</string>
    <string name="too_low_level_char_warning_text">Персонаж слишком низкого уровня</string>
    <string name="too_few_coins_userStatus_warning_text">Недостаточно монет</string>
    <string name="profile_title_text_view_text">Ваш профиль:</string>
    <string name="default_timer_time_text">00:00:00</string>
    <string name="return_button_text">Вернуться</string>
    <string name="location_title_text_view_text">Название локации</string>
    <string name="expedition_title_text_view_text">Экспедиция</string>
    <string name="expedition_location_image_desc">Expedition location</string>
    <string name="expedition_finishes_in_text_view_text">Завершится через:</string>
</resources>