<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SpreadCenterVerticalLayout">

    <TextView
        android:id="@+id/habit_add_title"
        style="@style/title_text"
        android:text="@string/habit_add_title" />

    <LinearLayout
        style="@style/SpreadCenterHorizontalLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/good_type_habit_button"
            style="@style/SpreadCenterHorizontalItem"
            android:text="@string/good_habit_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bad_type_habit_button"
            style="@style/SpreadCenterHorizontalItem"
            android:text="@string/bad_habit_button_text" />

    </LinearLayout>

    <LinearLayout style="@style/SpreadStartVerticalLayout">

        <EditText
            style="@style/HabitEditTextView"
            android:hint="@string/edit_habit_title_hint_text"
            android:textSize="20sp" />

        <EditText
            style="@style/HabitEditTextView"
            android:hint="@string/edit_habit_desc_hint_text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout style="@style/SpreadCenterHorizontalLayout">

        <LinearLayout style="@style/SpreadCenterHorizontalItem">
            <LinearLayout style="@style/SpreadCenterVerticalLayout">
                <TextView
                    style="@style/header2_text"
                    android:text="@string/habit_difficulty_text_view" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/habit_difficulty_value_slider"
                    style="@style/StandardSlider"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/SpreadCenterHorizontalItem">
            <LinearLayout style="@style/SpreadCenterVerticalLayout">
                <TextView
                    style="@style/header2_text"
                    android:text="@string/habit_priority_text_view" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/habit_priority_value_slider"
                    style="@style/StandardSlider"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SpreadCenterVerticalLayout">

        <TextView
            style="@style/header1_text"
            android:text="@string/interval_configure_text"/>

        <LinearLayout style="@style/SpreadCenterHorizontalLayout">
            <LinearLayout
                style="@style/SpreadCenterHorizontalItem"
                android:layout_weight="2">

                <com.google.android.material.slider.Slider
                    style="@style/StandardSlider"
                    android:id="@+id/habit_interval_number_value"/>

            </LinearLayout>
            <LinearLayout style="@style/SpreadCenterHorizontalItem">

                <com.github.vikramezhil.wheelpicker.view.WheelPicker
                    android:id="@+id/habit_interval_type_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:wheelPickerDividerColor="@android:color/white"
                    app:wheelPickerItemsTextBold="true"
                    app:wheelPickerItemsTextItalic="true"
                    app:wheelPickerOrientationVertical="false"
                    app:wheelPickerScaleDownEnabled="true"
                    app:wheelPickerItemsTextSize="8dp"
                    app:wheelPickerItemsUnselectedTextAlpha="0.8"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/save_button_text" />
</LinearLayout>