<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/char_stats_view"
    style="@style/SpreadCenterVerticalLayout">

    <include layout="@layout/exp_status_view_content"/>

    <LinearLayout
        style="@style/SpreadEndHorizontalLayout">
        <TextView
            android:text="@string/attack_view_text"
            style="@style/InfoTextView"/>
        <TextView
            android:id="@+id/attack_value_view"
            android:text="@string/default_number_text"
            style="@style/InfoValueView"/>
    </LinearLayout>

    <LinearLayout
        style="@style/SpreadEndHorizontalLayout">
        <TextView
            android:text="@string/defence_view_text"
            style="@style/InfoTextView"/>
        <TextView
            android:id="@+id/defence_value_view"
            android:text="@string/default_number_text"
            style="@style/InfoValueView"/>
    </LinearLayout>

    <LinearLayout
        style="@style/SpreadEndHorizontalLayout">
        <TextView
            android:text="@string/speed_view_text"
            style="@style/InfoTextView"/>
        <TextView
            android:id="@+id/speed_value_view"
            android:text="@string/default_number_text"
            style="@style/InfoValueView"/>
    </LinearLayout>

</LinearLayout>