<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/top_navigation_bar"
    android:layout_above="@id/bottom_navigation_bar"
    android:fillViewport="false">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/habit_change_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/title_text"
        android:text="@string/default_hello_world_text"/>

    <LinearLayout
        android:id="@+id/habit_change_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/habit_change_title"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_habit_title_hint_text"
            android:inputType="text"
            style="@style/HabitEditTextView"
            android:autofillHints=""/>
        <EditText
            android:id="@+id/edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_habit_desc_hint_text"
            android:inputType="textLongMessage"
            style="@style/HabitEditTextView"
            android:autofillHints=""/>
        <LinearLayout
            android:id="@+id/edit_checking_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/edit_checking_frequency_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_habit_frequency_hint_text"
                style="@style/header2_text"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/edit_checking_frequency_number_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/default_number_text"
                style="@style/header2_text"/>

            <Spinner
                android:id="@+id/edit_checking_frequency_period_type_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="20dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>
        <com.google.android.material.slider.Slider
            android:id="@+id/edit_checking_frequency_number_slider"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="1"
            android:valueTo="7"
            android:stepSize="1"
            android:layout_margin="20dp"/>
        <EditText
            android:id="@+id/edit_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_habit_priority_hint_text"
            android:inputType="number"
            style="@style/HabitEditTextView"
            android:autofillHints=""/>
        <EditText
            android:id="@+id/edit_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_habit_difficulty_hint_text"
            android:inputType="number"
            style="@style/HabitEditTextView"
            android:autofillHints=""/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/edit_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_habit_type_hint_text"
            android:checked="false"
            style="@style/HabitEditTextView" />

    </LinearLayout>

    <Button
        android:id="@+id/save_habit_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_hello_world_text"
        android:layout_below="@+id/habit_change_inputs"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

</RelativeLayout>
</ScrollView>