<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SpreadCenterHorizontalLayout">

        <TextView
            android:id="@+id/character_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_name_text_view"
            style="@style/title_text"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/character_name_value_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/header1_text"
            android:padding="8dp"
            android:text="@string/default_hello_world_text"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/character_portrait_view"
        app:icon="@drawable/h1"
        app:iconGravity="top"
        app:iconSize="125dp"
        app:cornerRadius="20dp"
        style="@style/CharacterButton"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        style="@style/SpreadCenterHorizontalLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/char_stats_view_button"
            android:text="@string/char_stats_view_button"
            style="@style/SpreadCenterHorizontalItem"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/char_equip_view_button"
            android:text="@string/char_equip_view_button"
            style="@style/SpreadCenterHorizontalItem"/>

    </LinearLayout>
    <include layout="@layout/char_stats_view_content"/>
    <include layout="@layout/char_equip_view_content"/>
</LinearLayout>