<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/habit_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_view_title_text"
        style="@style/title_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habits_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/habit_view_title">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/add_habit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/habits_list_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/add_habit_button_text"/>

    <Button
        android:id="@+id/update_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>