<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SpreadCenterVerticalLayout">


    <LinearLayout
        style="@style/SpreadCenterVerticalLayout">
        <TextView
            style="@style/header1_text"
            android:layout_margin="20dp"
            android:textSize="25sp"
            android:id="@+id/equip_name_text_value"
            android:text="@string/equip_name_text_value_default_text"
            />
        <LinearLayout style="@style/SpreadCenterHorizontalLayout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equipment_btn1"
                app:icon="@drawable/eq1_left_hand"
                app:iconGravity="top"
                app:iconSize="@dimen/equipment_icon_size"
                app:cornerRadius="20dp"
                style="@style/EquipmentButton"/>

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/left_to_right_arrow" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equipment_btn2"
                app:icon="@drawable/eq2_right_hand"
                app:iconGravity="top"
                app:iconSize="@dimen/equipment_icon_size"
                app:cornerRadius="20dp"
                style="@style/EquipmentButton"/>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_equipment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_number_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:icon="@drawable/ic_dollar"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconPadding="4dp"
        app:backgroundTint="@color/action_main_color" />

</LinearLayout>